[package]
authors = ["anotherempty"]
description = "Stack all css/scss/sass files into one css file"
edition = "2021"
license = "MIT"
name = "css-stacker"
repository = "https://github.com/anotherempty/css-stacker"
version = "0.1.1"

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
grass = "0.13.1"
ignore = "0.4.20"
lightningcss = { version = "1.0.0-alpha.51", features = ["browserslist"] }
thiserror = "1.0.48"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.5.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
