[package]
authors = ["anotherempty"]
description = "Stack all css/scss/sass files into one css file"
edition = "2021"
license = "MIT"
name = "css-stacker"
repository = "https://github.com/anotherempty/css-stacker"
version = "0.1.3"

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
grass = "0.13.1"
ignore = "0.4.20"
lightningcss = { version = "1.0.0-alpha.51", features = ["browserslist"] }
thiserror = "1.0.48"
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
  "fmt",
], optional = true }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
